# Kawariki

./: .gitignore  README.md  compatibilitytool.vdf  kawariki  nwjs-versions.json  overlayns-static  pyproject.toml  toolmanifest.vdf  versions.schema.json
case-insensitive-nw/: README.md  case-insensitive-nw.js
godot/: README.md  versions.json
lib/kawariki/: app.py  distribution.py  download.py  game.py  main.py  misc.py  process.py  pyproject.toml  quirks.py
lib/kawariki/fs/: __init__.py  os.py  util.py  zip.py
lib/kawariki/godot/: pack.py  runtime.py
lib/kawariki/mkxp/: runtime.py
lib/kawariki/nwjs/: package.py  patcher.py  runtime.py
lib/kawariki/patcher/: common.py
lib/kawariki/renpy/: detect.py  runtime.py
lib/kawariki/ui/: __init__.py  common.py  external.py  tkinter.py  tty.py
mkxp/: README.md  patches.rb  preload.rb  versions.json
mkxp/libs/: PreloadIni.rb  Win32API.rb
mkxp/ports/: TH_EventTriggerLabels.rb
nwjs/: README.md  greenworks.json  makefile  package.json  pnpm-lock.yaml  tsconfig.json  versions.json
nwjs/injects/: README.md  case-insensitive-nw.js  mv-decrypted-assets.js  remap-mv.js  rpg-remap.js  rpg-remap.js.map  rpg-remap.ts  rpg-vars.js  tsconfig.json
nwjs/js/: .gitignore  mv-decrypted-assets.js  mz-decrypted-assets.js
nwjs/js/es5/: logger.mjs  (+6 more)
nwjs/src/: es-polyfill.d.mts  es13-polyfill.mts  es5-polyfill.mts  logger.mts  rpg-definitions.d.ts  rpg-fixes.mts  rpg-inject.mts  rpg-remap.mts  rpg-remap.ts  rpg-vars.mts  rpg-vars.ts  scriptobserver.mts  tsconfig.es13.json  tsconfig.es5.json
renpy/: README.md  versions.json
(+19 files in other folders)
